--- a/package.json
+++ b/package.json
@@ -10,10 +10,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.17",
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-firebase/app": "^19.0.0",
+    "@react-native-firebase/auth": "^19.0.0",
+    "@react-native-firebase/firestore": "^19.0.0",
+    "@react-native-firebase/messaging": "^19.0.0",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.0",
+    "expo": "~52.0.18",
+    "expo-image-picker": "~16.0.3",
+    "expo-sharing": "~13.0.0",
     "expo-status-bar": "~2.0.0",
+    "firebase": "^11.0.2",
     "react": "18.3.1",
-    "react-native": "0.76.3"
+    "react-native": "^0.76.5",
+    "react-native-image-picker": "^7.2.3",
+    "react-native-maps": "^1.18.0",
+    "react-native-swiper": "^1.6.0",
+    "react-native-toast-message": "^2.2.1",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
